@@ -19,7 +19,7 @@ Test::ReportPrereqs.include[5] = File::ShareDir::Install
 [Prereqs / RuntimeRequires]
 JSON::Schema::Modern = 0.549
 JSON::Schema::Modern::Document::OpenAPI = 0.024
-OpenAPI::Modern = 0.031
+OpenAPI::Modern = 0.040
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
